--- a/Basic_WPF_MVVM/MainWindow.xaml
+++ b/Basic_WPF_MVVM/MainWindow.xaml
@@ -27,6 +27,10 @@
         <Label Grid.Row="3" Grid.Column="0" Margin="4" Content="Age" HorizontalAlignment="Right"/>
         <TextBlock Grid.Row="3" Grid.Column="1" Margin="4" Text="{Binding Age}" HorizontalAlignment="Left" Width="200"/>
         <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Add" Margin="4" Command="{Binding Path=CmdBoton}" CommandParameter="Alberto,Martinez"/>
-        <DataGrid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Name="DataGridUsers"/>
+        <DataGrid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Name="DataGridUsers" ItemsSource="{Binding Source=usersFN}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Usuaris" Width="*" Binding="{Binding Path='FullName'}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
